--- a/CheckIn/CheckIn/en.lproj/MainStoryboard.storyboard
+++ b/CheckIn/CheckIn/en.lproj/MainStoryboard.storyboard
@@ -109,7 +109,47 @@
             </objects>
             <point key="canvasLocation" x="218" y="-3995"/>
         </scene>
+        <!--Location Detail View Controller-->
+        <scene sceneID="kUV-em-CAZ">
+            <objects>
+                <viewController storyboardIdentifier="CILocationDetailViewController" id="D3J-qG-2n9" customClass="CILocationDetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="CILocationDetailViewController" id="08y-gi-Uik">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ymP-YI-GXJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="635" y="-3995"/>
+        </scene>
     </scenes>
+    <classes>
+        <class className="CIFeedViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CIFeedViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CIFeelingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CIFeelingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="feelingView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="CILocationDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CILocationDetailViewController.h"/>
+        </class>
+        <class className="CIViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CIViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
